# tinker-cli

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
src/tinker/: __init__.py  cli.py
tests/: test_cli.py
